--- a/style.css
+++ b/style.css
@@ -8,14 +8,16 @@ body {
 
 
 /* ------Custom scrollbar */
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     width: 15px;
 }
-::-webkit-scrollbar-track{
-    background:#d1e5ff;
+
+::-webkit-scrollbar-track {
+    background: #d1e5ff;
 }
-::-webkit-scrollbar-thumb{
-    background: linear-gradient(#642bff , #ff22e6);
+
+::-webkit-scrollbar-thumb {
+    background: linear-gradient(#642bff, #ff22e6);
     border-radius: 10px;
 }
 
@@ -37,6 +39,7 @@ body {
         transform: rotate(359deg);
     }
 }
+
 
 /* =================================================================== */
 
@@ -156,7 +159,7 @@ div.form-check.form-switch {
 
 
 
-/* Card Button */
+/* Card Button more info -> */
 .moreInfoBtn {
     background-color: #6195e9;
     padding: .75rem 1.25rem;
@@ -167,9 +170,16 @@ div.form-check.form-switch {
     inline-size: -webkit-fill-available;
 }
 
+
 /* Card More info Container */
 li {
     font-weight: bold;
+}
+
+/* Spinner moreInfo card button -> */
+.spinner-border {
+    width: 1.5rem;
+    height: 1.5rem;
 }
 
 
@@ -177,6 +187,25 @@ li {
 .modal-body {
     height: fit-content;
 }
+
+
+/* Modal Toggle button  ->  */
+.form-check-input-modal {
+    position: absolute;
+    /* top: 2px; */
+    /* left: 2px; */
+    width: 30px;
+    height: 35px;
+    /* background-color: #fff; */
+    /* border-radius: 50%; */
+    /* transition: 0.3s; */
+}
+
+.arrow-modal {
+    margin-right: 25px;
+    margin-top: 25px;
+}
+
 
 
 /* COMING SOON SECTION  */
@@ -194,9 +223,10 @@ li {
 /*  */
 
 /* Contact us -> */
-#contact{
+#contact {
     color: white;
 }
-#contact-us-img{
+
+#contact-us-img {
     mix-blend-mode: lighten;
 }
